NetMax/manifest_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netmax-svc  
                port:
                  number: 3000
